Added home fragment

--- a/app/src/main/res/navigation/activity_main_navigation.xml
+++ b/app/src/main/res/navigation/activity_main_navigation.xml
@@ -2,7 +2,29 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main_navigation"
-    app:startDestination="@id/nav_top_tracks">
+    app:startDestination="@id/nav_home">
+
+    <fragment
+        android:id="@+id/nav_home"
+        android:name="com.renovavision.deezerplayer.home.HomeFragment"
+        android:label="Home">
+
+        <action
+            android:id="@+id/navigate_to_artist"
+            app:destination="@id/nav_artist"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+
+        <action
+            android:id="@+id/navigate_to_player"
+            app:destination="@id/nav_player"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:popEnterAnim="@anim/fragment_fade_enter"
+            app:popExitAnim="@anim/fragment_fade_exit" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_top_tracks"
