--- a/album/src/main/res/layout/fragment_album.xml
+++ b/album/src/main/res/layout/fragment_album.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone" />
 
-        <com.renovavision.deezerplayer.ui.ErrorMessageView
+        <com.renovavision.deezerplayer.ui.views.ErrorMessageView
             android:id="@+id/error_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
