--- a/artist/src/main/res/layout/track_item.xml
+++ b/artist/src/main/res/layout/track_item.xml
@@ -6,7 +6,7 @@
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/white">
 
-    <com.renovavision.deezerplayer.ui.TrackView
+    <com.renovavision.deezerplayer.ui.views.TrackView
         android:id="@+id/trackView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
