--- a/player/src/main/res/layout/fragment_player.xml
+++ b/player/src/main/res/layout/fragment_player.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.renovavision.deezerplayer.ui.PlayerInfoView
+    <com.renovavision.deezerplayer.ui.views.PlayerInfoView
         android:id="@+id/playerInfoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
