--- a/tracks/src/main/res/layout/fragment_top_tracks.xml
+++ b/tracks/src/main/res/layout/fragment_top_tracks.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.renovavision.deezerplayer.ui.ErrorMessageView
+    <com.renovavision.deezerplayer.ui.views.ErrorMessageView
         android:id="@+id/error_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
